force-app/main/default/objects/Case/fields/Property_Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Valuation_Date__c</fullName>
    <description>Property Valuation Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Valuation Date</label>
    <type>Date</type>
</CustomField>