force-app/main/default/objects/Case/fields/Property_Valuation_Required__c.field-meta.xml
<CustomField>
    <fullName>Property_Valuation_Required__c</fullName>
    <description>VHF-3481</description>
    <formula>IF(ISBLANK( Property__r.Valuation_Date__c ),
Property__r.Actual_Settlement_Date__c + 90 &lt; IF(ISPICKVAL(Origin , &apos;Annual Review&apos;),  Annual_Review__r.Submitted_Date__c , DATEVALUE(CreatedDate)),
Property__r.Valuation_Date__c + 90 &lt; IF(ISPICKVAL(Origin , &apos;Annual Review&apos;),  Annual_Review__r.Submitted_Date__c , DATEVALUE(CreatedDate))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valuation Required</label>
    <type>Checkbox</type>
</CustomField>