force-app/main/default/objects/Case/fields/Proportionate_interest_amount__c.field-meta.xml
<CustomField>
    <fullName>Proportionate_interest_amount__c</fullName>
    <label>Proportional Interest Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>