force-app/main/default/objects/Case/fields/Provisional_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Approval_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provisional Approval Date</label>
    <type>Date</type>
</CustomField>