force-app/main/default/objects/Case/fields/Provisional_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Expiry__c</fullName>
    <formula>Individual_Application_Shadow__r.Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisional Expiry</label>
    <type>Date</type>
</CustomField>