force-app/main/default/objects/Case/fields/Reason_for_extn_of_loan_maturity_date__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_extn_of_loan_maturity_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reason for extension of loan maturity date</inlineHelpText>
    <label>Reason for extension of loan maturity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>