force-app/main/default/objects/Case/fields/Reason_for_refinancing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_refinancing__c</fullName>
    <label>Reason for refinancing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardship</fullName>
            </value>
            <value>
                <fullName>Voluntary payment to SRO</fullName>
            </value>
            <value>
                <fullName>Pay and exit VHF scheme</fullName>
            </value>
            <value>
                <fullName>Mandatory Payment to SRO</fullName>
            </value>
            <value>
                <fullName>Perform renovations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>