force-app/main/default/objects/Case/fields/Reason_for_Selling__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Selling__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Selling</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>