force-app/main/default/objects/Case/fields/Refinance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refinance Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>