force-app/main/default/objects/Case/fields/Refinance_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Confirmed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refinance Confirmed Date</label>
    <type>Date</type>
</CustomField>