force-app/main/default/objects/Case/fields/Refinance_Not_Approved_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Not_Approved_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refinance Not Approved Reason</label>
    <type>TextArea</type>
</CustomField>