force-app/main/default/objects/Case/fields/Refinance_Remediation_Date__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Remediation_Date__c</fullName>
    <formula>Submitted_Date__c +14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refinance Remediation Date</label>
    <type>Date</type>
</CustomField>