force-app/main/default/objects/Case/fields/Refinanced_Loan_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Refinanced_Loan_Maturity_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refinanced Loan Maturity Date</label>
    <type>Date</type>
</CustomField>