force-app/main/default/objects/Case/fields/Refinancing_bank__c.field-meta.xml
<CustomField>
    <fullName>Refinancing_bank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refinancing  bank(non-Panel Financier)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>