force-app/main/default/objects/Case/fields/Refinancing_with_same_PF__c.field-meta.xml
<CustomField>
    <fullName>Refinancing_with_same_PF__c</fullName>
    <label>Refinancing with same Panel Financier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>