force-app/main/default/objects/Case/fields/Rejection_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejection Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>