force-app/main/default/objects/Case/fields/Renovation_Decrease_in_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Decrease_in_Property_Value__c</fullName>
    <description>Renovation - Decrease in Property Value</description>
    <label>Renovation - Decrease in Property Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>