force-app/main/default/objects/Case/fields/Renovation_details__c.field-meta.xml
<CustomField>
    <fullName>Renovation_details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Renovation details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>