force-app/main/default/objects/Case/fields/Request_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Approval_Date__c</fullName>
    <description>VHF-1817</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Approval Date</label>
    <type>Date</type>
</CustomField>