force-app/main/default/objects/Case/fields/Reset_Status__c.field-meta.xml
<CustomField>
    <fullName>Reset_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Status</label>
    <type>Checkbox</type>
</CustomField>