force-app/main/default/objects/Case/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <label>Sale Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>