force-app/main/default/objects/Case/fields/Scheduled_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Settlement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Settlement Date</label>
    <type>Date</type>
</CustomField>