force-app/main/default/objects/Case/fields/Scheduled_Settlement_Date_Property_Sale__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Settlement_Date_Property_Sale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Settlement Date- Property Sale</label>
    <type>Date</type>
</CustomField>