force-app/main/default/objects/Case/fields/SEI_new__c.field-meta.xml
<CustomField>
    <fullName>SEI_new__c</fullName>
    <description>SEI(new)</description>
    <label>SEI (new)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>