force-app/main/default/objects/Case/fields/SEI_OLD__c.field-meta.xml
<CustomField>
    <fullName>SEI_OLD__c</fullName>
    <description>SEI(old)</description>
    <label>SEI (old)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>