force-app/main/default/objects/Case/fields/SEI_Reduction__c.field-meta.xml
<CustomField>
    <fullName>SEI_Reduction__c</fullName>
    <description>SEI Reduction percent</description>
    <label>SEI Reduction %</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>