force-app/main/default/objects/Case/fields/SEM_new__c.field-meta.xml
<CustomField>
    <fullName>SEM_new__c</fullName>
    <description>SEM(new)</description>
    <label>SEM (new)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>