force-app/main/default/objects/Case/fields/SEM_OLD__c.field-meta.xml
<CustomField>
    <fullName>SEM_OLD__c</fullName>
    <description>SEM(old)</description>
    <label>SEM (old)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>