force-app/main/default/objects/Case/fields/Settlement_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Cancellation_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>