force-app/main/default/objects/Case/fields/Settlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Status__c</fullName>
    <label>Settlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upcoming settlement</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Overdue settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>