force-app/main/default/objects/Case/fields/Settlement_Status_FF__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Status_FF__c</fullName>
    <formula>IF(
   AND(
      Final_Schedule_Settlement_Date__c &lt;=Today(), 
      ISPICKVAL(Status, &quot;Settlement&quot;)),
         &quot;Overdue Settlement&quot;,

IF(
    AND(
      Final_Schedule_Settlement_Date__c &gt;Today(), 
      ISPICKVAL(Status, &quot;Settlement&quot;)),
         &quot;Upcoming Settlement&quot;,

IF(
   AND(
       IsFinalApp_Settled__c=True, 
      ISPICKVAL(Status, &quot;Closed&quot;)),
         &quot;Settled&quot;,

            NULL)))</formula>
    <label>Settlement Status</label>
    <type>Text</type>
</CustomField>