force-app/main/default/objects/Case/fields/Show_PIA_Calculation_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_PIA_Calculation_Button__c</fullName>
    <description>Dynamic action can support only 9 filters, this formula field allows more filters to be applied as a workaround</description>
    <formula>IF( ISPICKVAL(Status, &apos;Payment Requested&apos;), false ,
     IF( ISPICKVAL(Status, &apos;Cancelled&apos;), false ,
          IF( ISPICKVAL(Status, &apos;Rejected&apos;), false ,
               IF( ISPICKVAL(Status, &apos;Mortgage Discharged&apos;), false ,
                    IF( ISPICKVAL(Status, &apos;Payment Received&apos;), false ,
                         IF( ISPICKVAL(Status, &apos;Cancelled Settlement&apos;), false ,
                              IF( Record_Type_Name__c = &apos;Final Payment&apos;, true ,
                                   IF( Record_Type_Name__c = &apos;Property Sale&apos;, true, false )
                         )    )
                    )
               )
          )
     )
)</formula>
    <label>Show PIA Calculation Button</label>
    <type>Checkbox</type>
</CustomField>