force-app/main/default/objects/Case/fields/Start_date_is_same_as_annual_review__c.field-meta.xml
<CustomField>
    <fullName>Start_date_is_same_as_annual_review__c</fullName>
    <formula>IF(
AND(Absence_start_date__c == Annual_Review__r.Annual_Review_Start_Date__c,ISPICKVAL( Origin , &quot;Annual Review&quot;)), TRUE, FALSE)</formula>
    <label>Start date is same as annual review</label>
    <type>Checkbox</type>
</CustomField>