force-app/main/default/objects/Case/fields/Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by__c</fullName>
    <description>Submitted_by</description>
    <formula>Contact_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted by</label>
    <type>Text</type>
</CustomField>