force-app/main/default/objects/Case/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Submitted Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>