force-app/main/default/objects/Case/fields/Valuation_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Valuation_expiry_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valuation expiry date</label>
    <type>Date</type>
</CustomField>