force-app/main/default/objects/Case/fields/Valuation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Fee__c</fullName>
    <description>Valuation Fee</description>
    <label>Valuation Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>