force-app/main/default/objects/Case/fields/Valuation_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Reference_Number__c</fullName>
    <description>Valuation Reference Numbers</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Valuation Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>