force-app/main/default/objects/Case/fields/VGSO_Visible__c.field-meta.xml
<CustomField>
    <fullName>VGSO_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when refinance Case status updated to  &apos;Confirmed&apos; / &apos;Mortgage Re-registered&apos;. Used in sharing rule to share case with VGSO</description>
    <label>VGSO Visible</label>
    <type>Checkbox</type>
</CustomField>