force-app/main/default/objects/Case/fields/vlocity_ins__FinancialAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FinancialAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>vlocity_ins__FinancialAccount__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>