force-app/main/default/objects/Case/fields/Windfall_gain_amount__c.field-meta.xml
<CustomField>
    <fullName>Windfall_gain_amount__c</fullName>
    <description>Windfall gain amount</description>
    <inlineHelpText>Windfall gain amount that the participant received</inlineHelpText>
    <label>Windfall gain amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>