force-app/main/default/objects/Case/fields/Windfall_gain_payment__c.field-meta.xml
<CustomField>
    <fullName>Windfall_gain_payment__c</fullName>
    <description>Amount the participant is willing to pay towards reducing the state&apos;s share in the property from the windfall gain</description>
    <label>Windfall gain payment</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>