force-app/main/default/objects/Case/recordTypes/Duplicate_Application_Check.recordType-meta.xml
<RecordType>
    <fullName>Duplicate_Application_Check</fullName>
    <active>true</active>
    <businessProcess>Duplicate VHF Application Support Process</businessProcess>
    <label>Duplicate Application Check</label>
</RecordType>