force-app/main/default/objects/Case/recordTypes/Early_Payment.recordType-meta.xml
<RecordType>
    <fullName>Early_Payment</fullName>
    <active>true</active>
    <businessProcess>Early Payment</businessProcess>
    <label>Early Payment</label>
</RecordType>