force-app/main/default/objects/Case/recordTypes/Final_Early_Payment.recordType-meta.xml
<RecordType>
    <fullName>Final_Early_Payment</fullName>
    <active>true</active>
    <businessProcess>Final%2FEarly Payment</businessProcess>
    <label>Final/Early Payment</label>
</RecordType>