force-app/main/default/objects/Case/recordTypes/Final_Payment.recordType-meta.xml
<RecordType>
    <fullName>Final_Payment</fullName>
    <active>true</active>
    <businessProcess>Final Payment</businessProcess>
    <label>Final Payment</label>
</RecordType>