force-app/main/default/objects/Case/recordTypes/Income_Threshold_Breach.recordType-meta.xml
<RecordType>
    <fullName>Income_Threshold_Breach</fullName>
    <active>true</active>
    <businessProcess>Income Threshold Breach</businessProcess>
    <label>Income Threshold Breach</label>
</RecordType>