force-app/main/default/objects/Case/recordTypes/Income_Threshold_Exceeded.recordType-meta.xml
<RecordType>
    <fullName>Income_Threshold_Exceeded</fullName>
    <active>true</active>
    <businessProcess>Income Threshold Exceeded</businessProcess>
    <label>Income Threshold Exceeded</label>
</RecordType>