force-app/main/default/objects/Case/recordTypes/Long_Term_Absence.recordType-meta.xml
<RecordType>
    <fullName>Long_Term_Absence</fullName>
    <active>true</active>
    <businessProcess>Long Term Absence</businessProcess>
    <label>Long Term Absence</label>
</RecordType>