force-app/main/default/objects/Case/recordTypes/Property_Sale.recordType-meta.xml
<RecordType>
    <fullName>Property_Sale</fullName>
    <active>true</active>
    <businessProcess>Property Sale</businessProcess>
    <label>Property Sale</label>
</RecordType>