force-app/main/default/objects/Case/recordTypes/Refinance.recordType-meta.xml
<RecordType>
    <fullName>Refinance</fullName>
    <active>true</active>
    <businessProcess>Refinance</businessProcess>
    <label>Refinance</label>
</RecordType>