force-app/main/default/objects/Case/recordTypes/Renovations.recordType-meta.xml
<RecordType>
    <fullName>Renovations</fullName>
    <active>true</active>
    <businessProcess>Renovations</businessProcess>
    <label>Renovations</label>
</RecordType>