force-app/main/default/objects/Case/recordTypes/VHF_Application_Processing.recordType-meta.xml
<RecordType>
    <fullName>VHF_Application_Processing</fullName>
    <active>true</active>
    <businessProcess>VHF Application Processor</businessProcess>
    <label>VHF Application Processing</label>
</RecordType>