force-app/main/default/objects/Case/recordTypes/VHF_Application_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>VHF_Application_Record_Type</fullName>
    <active>true</active>
    <businessProcess>VHF Application Support Process</businessProcess>
    <label>VHF Applications</label>
</RecordType>