force-app/main/default/objects/Case/recordTypes/VHF_Exceptions.recordType-meta.xml
<RecordType>
    <fullName>VHF_Exceptions</fullName>
    <active>true</active>
    <businessProcess>VHF Exception Support Process</businessProcess>
    <label>VHF Exceptions</label>
</RecordType>